MICN-96 (#374)
* MICN-96