@@ -1,6 +1,11 @@
 package uk.gov.justice.hmpps.casenotes.services;
 
 import com.microsoft.applicationinsights.TelemetryClient;
+import jakarta.persistence.EntityExistsException;
+import jakarta.persistence.EntityManager;
+import jakarta.validation.Valid;
+import jakarta.validation.ValidationException;
+import jakarta.validation.constraints.NotNull;
 import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.math.NumberUtils;
@@ -9,11 +14,13 @@ import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
+import org.springframework.data.domain.Sort.Direction;
 import org.springframework.security.access.AccessDeniedException;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.validation.annotation.Validated;
+import uk.gov.justice.hmpps.casenotes.config.CaseNoteRequestContext;
 import uk.gov.justice.hmpps.casenotes.config.SecurityUserContext;
 import uk.gov.justice.hmpps.casenotes.dto.CaseNote;
 import uk.gov.justice.hmpps.casenotes.dto.CaseNoteAmendment;
@@ -33,19 +40,16 @@ import uk.gov.justice.hmpps.casenotes.repository.OffenderCaseNoteAmendmentReposi
 import uk.gov.justice.hmpps.casenotes.repository.OffenderCaseNoteRepository;
 import uk.gov.justice.hmpps.casenotes.repository.ParentCaseNoteTypeRepository;
 
-import jakarta.persistence.EntityExistsException;
-import jakarta.validation.Valid;
-import jakarta.validation.ValidationException;
-import jakarta.validation.constraints.NotNull;
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.UUID;
 import java.util.Map;
+import java.util.UUID;
 import java.util.stream.Collectors;
 
 import static com.google.common.base.Strings.isNullOrEmpty;
 import static java.lang.String.format;
 import static java.lang.String.valueOf;
+import static java.util.Optional.ofNullable;
 import static org.springframework.data.domain.Sort.Direction.ASC;
 
 @Service
@@ -64,12 +68,18 @@ public class CaseNoteService {
     private final ExternalApiService externalApiService;
     private final CaseNoteTypeMerger caseNoteTypeMerger;
     private final TelemetryClient telemetryClient;
+    private final EntityManager entityManager;
 
-    public Page<CaseNote> getCaseNotes(final String offenderIdentifier, final CaseNoteFilter caseNoteFilter, final Pageable pageable) {
+    public Page<CaseNote> getCaseNotes(
+        final String offenderIdentifier,
+        final CaseNoteFilter caseNoteFilter,
+        final Pageable pageable
+    ) {
 
         final List<CaseNote> sensitiveCaseNotes;
 
-        final var includeSensitiveCaseNotes = isAllowedToViewOrCreateSensitiveCaseNote() && caseNoteFilter.getIncludeSensitive();
+        final var includeSensitiveCaseNotes =
+            isAllowedToViewOrCreateSensitiveCaseNote() && caseNoteFilter.getIncludeSensitive();
         final var filter = new OffenderCaseNoteFilter(
             offenderIdentifier,
             caseNoteFilter.getLocationId(),
@@ -77,7 +87,8 @@ public class CaseNoteService {
             !includeSensitiveCaseNotes,
             caseNoteFilter.getStartDate(),
             caseNoteFilter.getEndDate(),
-            caseNoteFilter.getTypesAndSubTypes());
+            caseNoteFilter.getTypesAndSubTypes()
+        );
 
         sensitiveCaseNotes = repository.findAll(filter)
             .stream()
@@ -87,22 +98,26 @@ public class CaseNoteService {
         final Page<CaseNote> caseNotes;
         if (sensitiveCaseNotes.isEmpty()) {
             // Just delegate to prison api for data
-            final var pagedNotes = externalApiService.getOffenderCaseNotes(offenderIdentifier, caseNoteFilter, pageable);
+            final var pagedNotes =
+                externalApiService.getOffenderCaseNotes(offenderIdentifier, caseNoteFilter, pageable);
 
             final var dtoNotes = translateToDto(pagedNotes, offenderIdentifier);
             caseNotes = new PageImpl<>(dtoNotes, pageable, pagedNotes.getTotalElements());
 
         } else {
             // There are both case note sources.  Combine
-            final var pagedNotes = externalApiService.getOffenderCaseNotes(offenderIdentifier, caseNoteFilter, PageRequest.of(0, 10000));
+            final var pagedNotes =
+                externalApiService.getOffenderCaseNotes(offenderIdentifier, caseNoteFilter, PageRequest.of(0, 10000));
 
             final var dtoNotes = translateToDto(pagedNotes, offenderIdentifier);
 
             dtoNotes.addAll(sensitiveCaseNotes);
 
             // only supports one field sort.
-            final var direction = pageable.getSort().isSorted() ? pageable.getSort().get().map(Sort.Order::getDirection).collect(Collectors.toList()).get(0) : Sort.Direction.DESC;
-            final var sortField = pageable.getSort().isSorted() ? pageable.getSort().get().map(Sort.Order::getProperty).collect(Collectors.toList()).get(0) : "occurrenceDateTime";
+            final var direction = pageable.getSort().isSorted() ? pageable.getSort().get().map(Sort.Order::getDirection)
+                .toList().getFirst() : Direction.DESC;
+            final var sortField = pageable.getSort().isSorted() ? pageable.getSort().get().map(Sort.Order::getProperty)
+                .toList().getFirst() : "occurrenceDateTime";
 
             final var sortedList = sortByFieldName(dtoNotes, sortField, direction);
 
@@ -116,27 +131,31 @@ public class CaseNoteService {
 
     private List<CaseNote> translateToDto(final Page<NomisCaseNote> pagedNotes, final String offenderIdentifier) {
         return pagedNotes.getContent()
-                .stream()
-                .map(cn -> mapper(cn, offenderIdentifier))
-                .collect(Collectors.toList());
+            .stream()
+            .map(cn -> mapper(cn, offenderIdentifier))
+            .collect(Collectors.toList());
     }
 
     @SuppressWarnings("unchecked")
-    private static List<CaseNote> sortByFieldName(final List<CaseNote> list, final String fieldName, final Sort.Direction direction) {
+    private static List<CaseNote> sortByFieldName(
+        final List<CaseNote> list,
+        final String fieldName,
+        final Sort.Direction direction
+    ) {
         try {
             final var field = CaseNote.class.getDeclaredField(fieldName);
             field.setAccessible(true);
 
             return list.stream()
-                    .sorted((first, second) -> {
-                        try {
-                            return direction == ASC ? ((Comparable<Object>) field.get(first)).compareTo(field.get(second))
-                                    : ((Comparable<Object>) field.get(second)).compareTo(field.get(first));
-                        } catch (IllegalAccessException e) {
-                            throw new RuntimeException("Error", e);
-                        }
-                    })
-                    .collect(Collectors.toList());
+                .sorted((first, second) -> {
+                    try {
+                        return direction == ASC ? ((Comparable<Object>) field.get(first)).compareTo(field.get(second))
+                            : ((Comparable<Object>) field.get(second)).compareTo(field.get(first));
+                    } catch (IllegalAccessException e) {
+                        throw new RuntimeException("Error", e);
+                    }
+                })
+                .collect(Collectors.toList());
         } catch (final NoSuchFieldException e) {
             return list;
         }
@@ -145,66 +164,72 @@ public class CaseNoteService {
     private CaseNote mapper(final OffenderCaseNote cn) {
         final var parentType = cn.getCaseNoteType().getParentType();
         return CaseNote.builder()
-                .caseNoteId(cn.getId().toString())
-                .eventId(cn.getEventId())
-                .offenderIdentifier(cn.getOffenderIdentifier())
-                .occurrenceDateTime(cn.getOccurrenceDateTime())
-                .authorUserId(cn.getAuthorUserId())
-                .authorName(cn.getAuthorName())
-                .type(parentType.getType())
-                .typeDescription(parentType.getDescription())
-                .subType(cn.getCaseNoteType().getType())
-                .subTypeDescription(cn.getCaseNoteType().getDescription())
-                .source(SERVICE_NAME) // Indicates its a Offender Case Note Service Type
-                .sensitive(cn.getCaseNoteType().isSensitive())
-                .text(cn.getNoteText())
-                .creationDateTime(cn.getCreateDateTime())
-                .amendments(cn.getAmendments().stream().map(
-                        a -> CaseNoteAmendment.builder()
-                                .authorUserName(a.getAuthorUsername())
-                                .authorUserId(a.getAuthorUserId())
-                                .authorName(a.getAuthorName())
-                                .additionalNoteText(a.getNoteText())
-                                .caseNoteAmendmentId(a.getId())
-                                .creationDateTime(a.getCreateDateTime())
-                                .build()
-                ).collect(Collectors.toList()))
-                .locationId(cn.getLocationId())
-                .build();
+            .caseNoteId(cn.getId().toString())
+            .eventId(cn.getEventId())
+            .offenderIdentifier(cn.getOffenderIdentifier())
+            .occurrenceDateTime(cn.getOccurrenceDateTime())
+            .authorUserId(cn.getAuthorUserId())
+            .authorName(cn.getAuthorName())
+            .type(parentType.getType())
+            .typeDescription(parentType.getDescription())
+            .subType(cn.getCaseNoteType().getType())
+            .subTypeDescription(cn.getCaseNoteType().getDescription())
+            .source(SERVICE_NAME) // Indicates its a Offender Case Note Service Type
+            .sensitive(cn.getCaseNoteType().isSensitive())
+            .text(cn.getNoteText())
+            .creationDateTime(cn.getCreateDateTime())
+            .amendments(cn.getAmendments().stream().map(
+                a -> CaseNoteAmendment.builder()
+                    .authorUserName(a.getAuthorUsername())
+                    .authorUserId(a.getAuthorUserId())
+                    .authorName(a.getAuthorName())
+                    .additionalNoteText(a.getNoteText())
+                    .caseNoteAmendmentId(a.getId())
+                    .creationDateTime(a.getCreateDateTime())
+                    .build()
+            ).toList())
+            .locationId(cn.getLocationId())
+            .build();
     }
 
     private CaseNote mapper(final NomisCaseNote cn, final String offenderIdentifier) {
         return CaseNote.builder()
-                .caseNoteId(cn.getCaseNoteId().toString())
-                .eventId(cn.getCaseNoteId())
-                .offenderIdentifier(offenderIdentifier)
-                .occurrenceDateTime(cn.getOccurrenceDateTime())
-                .authorName(cn.getAuthorName())
-                .authorUserId(valueOf(cn.getStaffId()))
-                .type(cn.getType())
-                .typeDescription(cn.getTypeDescription())
-                .subType(cn.getSubType())
-                .subTypeDescription(cn.getSubTypeDescription())
-                .source(cn.getSource())
-                .sensitive(false)
-                .text(cn.getOriginalNoteText())
-                .creationDateTime(cn.getCreationDateTime())
-                .amendments(cn.getAmendments().stream().map(
-                        a -> CaseNoteAmendment.builder()
-                                .authorName(a.getAuthorName())
-                                .authorUserId(a.getAuthorUserId())
-                                .authorUserName(a.getAuthorUsername())
-                                .additionalNoteText(a.getAdditionalNoteText())
-                                .creationDateTime(a.getCreationDateTime())
-                                .build()
-                ).collect(Collectors.toList()))
-                .locationId(cn.getAgencyId())
-                .build();
+            .caseNoteId(cn.getCaseNoteId().toString())
+            .eventId(cn.getCaseNoteId())
+            .offenderIdentifier(offenderIdentifier)
+            .occurrenceDateTime(cn.getOccurrenceDateTime())
+            .authorName(cn.getAuthorName())
+            .authorUserId(valueOf(cn.getStaffId()))
+            .type(cn.getType())
+            .typeDescription(cn.getTypeDescription())
+            .subType(cn.getSubType())
+            .subTypeDescription(cn.getSubTypeDescription())
+            .source(cn.getSource())
+            .sensitive(false)
+            .text(cn.getOriginalNoteText())
+            .creationDateTime(cn.getCreationDateTime())
+            .amendments(cn.getAmendments().stream().map(
+                a -> CaseNoteAmendment.builder()
+                    .authorName(a.getAuthorName())
+                    .authorUserId(a.getAuthorUserId())
+                    .authorUserName(a.getAuthorUsername())
+                    .additionalNoteText(a.getAdditionalNoteText())
+                    .creationDateTime(a.getCreationDateTime())
+                    .build()
+            ).toList())
+            .locationId(cn.getAgencyId())
+            .build();
     }
 
     @Transactional
-    public CaseNote createCaseNote(@NotNull final String offenderIdentifier, @NotNull @Valid final NewCaseNote newCaseNote) {
-        final var type = caseNoteTypeRepository.findCaseNoteTypeByParentType_TypeAndType(newCaseNote.getType(), newCaseNote.getSubType());
+    public CaseNote createCaseNote(
+        @NotNull final String offenderIdentifier,
+        @NotNull @Valid final NewCaseNote newCaseNote
+    ) {
+        final var type = caseNoteTypeRepository.findCaseNoteTypeByParentTypeTypeAndType(
+            newCaseNote.getType(),
+            newCaseNote.getSubType()
+        );
 
         // If we don't have the type locally then won't be secure, so delegate to prison-api
         if (type == null) {
@@ -218,41 +243,52 @@ public class CaseNoteService {
 
         // ensure that the case note type is active
         if (!type.getParentType().isActive() || !type.isActive()) {
-            throw new ValidationException(format("Case Note Type %s/%s is not active", type.getParentType().getType(), type.getType()));
+            throw new ValidationException(format(
+                "Case Note Type %s/%s is not active",
+                type.getParentType().getType(),
+                type.getType()
+            ));
         }
 
-        final var username = securityUserContext.getCurrentUser().getUsername();
-        final var userDetails = externalApiService.getUserDetails(username);
-        final var authorName = userDetails
-            .map(user -> isNullOrEmpty(user.getName()) ? username : user.getName())
-            .orElse(username);
-        final var authorUserId = userDetails
-            .map(user -> isNullOrEmpty(user.getUserId()) ? username : user.getUserId())
-            .orElse(username);
+        final CaseNoteRequestContext context = CaseNoteRequestContext.Companion.get();
 
-        final var locationId = newCaseNote.getLocationId() == null ? externalApiService.getOffenderLocation(offenderIdentifier) : newCaseNote.getLocationId();
+        final var locationId =
+            newCaseNote.getLocationId() == null ? externalApiService.getOffenderLocation(offenderIdentifier) : newCaseNote.getLocationId();
 
         final var caseNote = OffenderCaseNote.builder()
-                .noteText(newCaseNote.getText())
-                .authorUsername(username)
-                .authorUserId(authorUserId)
-                .authorName(authorName)
-                .occurrenceDateTime(newCaseNote.getOccurrenceDateTime() == null ? LocalDateTime.now() : newCaseNote.getOccurrenceDateTime())
-                .caseNoteType(type)
-                .offenderIdentifier(offenderIdentifier)
-                .locationId(locationId)
-                .build();
+            .noteText(newCaseNote.getText())
+            .authorUsername(context.getUsername())
+            .authorUserId(context.getUserId())
+            .authorName(context.getUserDisplayName())
+            .occurrenceDateTime(newCaseNote.getOccurrenceDateTime() == null ? LocalDateTime.now() : newCaseNote.getOccurrenceDateTime())
+            .caseNoteType(type)
+            .offenderIdentifier(offenderIdentifier)
+            .locationId(locationId)
+            .build();
 
-        return mapper(repository.save(caseNote));
+        // save and flush to activate database event id generation
+        var saved = repository.saveAndFlush(caseNote);
+        // refresh so the entity is populated with the event id before attempting to map
+        entityManager.refresh(saved);
+        return mapper(saved);
     }
 
     @Transactional
-    public CaseNote amendCaseNote(@NotNull final String offenderIdentifier, @NotNull final String caseNoteIdentifier, @NotNull @Valid final UpdateCaseNote amendCaseNote) {
+    public CaseNote amendCaseNote(
+        @NotNull final String offenderIdentifier,
+        @NotNull final String caseNoteIdentifier,
+        @NotNull @Valid final UpdateCaseNote amendCaseNote
+    ) {
         if (isNotSensitiveCaseNote(caseNoteIdentifier)) {
-            return mapper(externalApiService.amendOffenderCaseNote(offenderIdentifier, NumberUtils.toLong(caseNoteIdentifier), amendCaseNote), offenderIdentifier);
+            return mapper(externalApiService.amendOffenderCaseNote(
+                offenderIdentifier,
+                NumberUtils.toLong(caseNoteIdentifier),
+                amendCaseNote
+            ), offenderIdentifier);
         }
 
-        final var offenderCaseNote = repository.findById(UUID.fromString(caseNoteIdentifier)).orElseThrow(() -> EntityNotFoundException.withId(caseNoteIdentifier));
+        final var offenderCaseNote = repository.findById(UUID.fromString(caseNoteIdentifier))
+            .orElseThrow(() -> EntityNotFoundException.withId(caseNoteIdentifier));
         if (offenderCaseNote.getCaseNoteType().isRestrictedUse() && !isAllowedToCreateRestrictedCaseNote()) {
             throw new AccessDeniedException("User not allowed to amend this case note type [" + offenderCaseNote.getCaseNoteType() + "]");
         }
@@ -277,51 +313,70 @@ public class CaseNoteService {
 
     public List<CaseNoteTypeDto> getCaseNoteTypes() {
         final var caseNoteTypes = externalApiService.getCaseNoteTypes();
-        return caseNoteTypeMerger.mergeAndSortList(caseNoteTypes, getCaseNoteTypes(true, isAllowedToViewOrCreateSensitiveCaseNote(), null));
+        return caseNoteTypeMerger.mergeAndSortList(
+            caseNoteTypes,
+            getCaseNoteTypes(true, isAllowedToViewOrCreateSensitiveCaseNote(), null)
+        );
     }
 
     public List<CaseNoteTypeDto> getUserCaseNoteTypes() {
         final var userCaseNoteTypes = externalApiService.getUserCaseNoteTypes();
-        return caseNoteTypeMerger.mergeAndSortList(userCaseNoteTypes, getCaseNoteTypes(false, null, isAllowedToCreateRestrictedCaseNote()));
+        return caseNoteTypeMerger.mergeAndSortList(
+            userCaseNoteTypes,
+            getCaseNoteTypes(false, null, isAllowedToCreateRestrictedCaseNote())
+        );
     }
 
 
-    private List<CaseNoteTypeDto> getCaseNoteTypes(final boolean allTypes, final Boolean sensitiveAllowed, final Boolean restrictedAllowed) {
+    private List<CaseNoteTypeDto> getCaseNoteTypes(
+        final boolean allTypes,
+        final Boolean sensitiveAllowed,
+        final Boolean restrictedAllowed
+    ) {
         return parentCaseNoteTypeRepository.findAll().stream()
-                .filter(t -> allTypes || t.isActive())
-                .map(st -> transform(st, allTypes, sensitiveAllowed, restrictedAllowed))
-                .filter(pt -> pt.getSubCodes().size() > 0)
-                .collect(Collectors.toList());
+            .filter(t -> allTypes || t.isActive())
+            .map(st -> transform(st, allTypes, sensitiveAllowed, restrictedAllowed))
+            .filter(pt -> !pt.getSubCodes().isEmpty())
+            .collect(Collectors.toList());
     }
 
-    private CaseNoteTypeDto transform(final ParentNoteType parentNoteType, final boolean allTypes, final Boolean sensitiveAllowed, final Boolean restrictedAllowed) {
+    private CaseNoteTypeDto transform(
+        final ParentNoteType parentNoteType,
+        final boolean allTypes,
+        final Boolean sensitiveAllowed,
+        final Boolean restrictedAllowed
+    ) {
         return CaseNoteTypeDto.builder()
-                .code(parentNoteType.getType())
-                .description(parentNoteType.getDescription())
-                .activeFlag(parentNoteType.isActive() ? "Y" : "N")
-                .source(SERVICE_NAME)
-                .subCodes(parentNoteType.getSubTypes().stream()
-                        .filter(t -> allTypes || t.isActive())
-                        .filter(t -> restrictedAllowed == null || (restrictedAllowed || !t.isRestrictedUse()))
-                        .filter(t -> sensitiveAllowed == null || (sensitiveAllowed || !t.isSensitive()))
-                        .map(st -> CaseNoteTypeDto.builder()
-                                .code(st.getType())
-                                .description(st.getDescription())
-                                .source(SERVICE_NAME)
-                                .activeFlag(st.isActive() ? "Y" : "N")
-                                .sensitive(st.isSensitive())
-                                .restrictedUse(st.isRestrictedUse())
-                                .build())
-                        .collect(Collectors.toList()))
-                .build();
+            .code(parentNoteType.getType())
+            .description(parentNoteType.getDescription())
+            .activeFlag(parentNoteType.isActive() ? "Y" : "N")
+            .source(SERVICE_NAME)
+            .subCodes(parentNoteType.getSubTypes().stream()
+                .filter(t -> allTypes || t.isActive())
+                .filter(t -> restrictedAllowed == null || (restrictedAllowed || !t.isRestrictedUse()))
+                .filter(t -> sensitiveAllowed == null || (sensitiveAllowed || !t.isSensitive()))
+                .map(st -> CaseNoteTypeDto.builder()
+                    .code(st.getType())
+                    .description(st.getDescription())
+                    .source(SERVICE_NAME)
+                    .activeFlag(st.isActive() ? "Y" : "N")
+                    .sensitive(st.isSensitive())
+                    .restrictedUse(st.isRestrictedUse())
+                    .build())
+                .toList())
+            .build();
     }
 
     public CaseNote getCaseNote(final String offenderIdentifier, final String caseNoteIdentifier) {
         if (isNotSensitiveCaseNote(caseNoteIdentifier)) {
-            return mapper(externalApiService.getOffenderCaseNote(offenderIdentifier, NumberUtils.toLong(caseNoteIdentifier)), offenderIdentifier);
+            return mapper(externalApiService.getOffenderCaseNote(
+                offenderIdentifier,
+                NumberUtils.toLong(caseNoteIdentifier)
+            ), offenderIdentifier);
         }
 
-        final var caseNote = repository.findById(UUID.fromString(caseNoteIdentifier)).orElseThrow(() -> EntityNotFoundException.withId(caseNoteIdentifier));
+        final var caseNote = repository.findById(UUID.fromString(caseNoteIdentifier))
+            .orElseThrow(() -> EntityNotFoundException.withId(caseNoteIdentifier));
 
         if (caseNote.getCaseNoteType().isSensitive() && !isAllowedToViewOrCreateSensitiveCaseNote()) {
             throw new AccessDeniedException("User not allowed to view sensitive case notes");
@@ -344,31 +399,35 @@ public class CaseNoteService {
         }
 
         final var parentNoteType = parentCaseNoteTypeRepository.save(ParentNoteType.builder()
-                .type(newCaseNoteType.getType())
-                .description(newCaseNoteType.getDescription())
-                .active(newCaseNoteType.isActive())
-                .build());
+            .type(newCaseNoteType.getType())
+            .description(newCaseNoteType.getDescription())
+            .active(newCaseNoteType.isActive())
+            .build());
 
         return transform(parentNoteType, true, true, true);
     }
 
     @Transactional
     @PreAuthorize("hasAnyRole('MAINTAIN_REF_DATA', 'SYSTEM_USER')")
-    public CaseNoteTypeDto createCaseNoteSubType(final String parentType, @NotNull @Valid final NewCaseNoteType newCaseNoteType) {
-        final var parentNoteType = parentCaseNoteTypeRepository.findById(parentType).orElseThrow(EntityNotFoundException.withId(parentType));
+    public CaseNoteTypeDto createCaseNoteSubType(
+        final String parentType,
+        @NotNull @Valid final NewCaseNoteType newCaseNoteType
+    ) {
+        final var parentNoteType =
+            parentCaseNoteTypeRepository.findById(parentType).orElseThrow(EntityNotFoundException.withId(parentType));
 
         if (parentNoteType.getSubType(newCaseNoteType.getType()).isPresent()) {
             throw new EntityExistsException(newCaseNoteType.getType());
         }
         parentNoteType.getSubTypes().add(
-                CaseNoteType.builder()
-                        .type(newCaseNoteType.getType())
-                        .description(newCaseNoteType.getDescription())
-                        .active(newCaseNoteType.isActive())
-                        .parentType(parentNoteType)
-                        .sensitive(newCaseNoteType.isSensitive())
-                        .restrictedUse(newCaseNoteType.isRestrictedUse())
-                        .build()
+            CaseNoteType.builder()
+                .type(newCaseNoteType.getType())
+                .description(newCaseNoteType.getDescription())
+                .active(newCaseNoteType.isActive())
+                .parentType(parentNoteType)
+                .sensitive(newCaseNoteType.isSensitive())
+                .restrictedUse(newCaseNoteType.isRestrictedUse())
+                .build()
         );
 
         return transform(parentNoteType, true, true, true);
@@ -377,17 +436,24 @@ public class CaseNoteService {
     @Transactional
     @PreAuthorize("hasAnyRole('MAINTAIN_REF_DATA', 'SYSTEM_USER')")
     public CaseNoteTypeDto updateCaseNoteType(final String parentType, @NotNull @Valid final UpdateCaseNoteType body) {
-        final var parentNoteType = parentCaseNoteTypeRepository.findById(parentType).orElseThrow(EntityNotFoundException.withId(parentType));
+        final var parentNoteType =
+            parentCaseNoteTypeRepository.findById(parentType).orElseThrow(EntityNotFoundException.withId(parentType));
         parentNoteType.update(body.getDescription(), body.isActive());
         return transform(parentNoteType, true, true, true);
     }
 
     @Transactional
     @PreAuthorize("hasAnyRole('MAINTAIN_REF_DATA', 'SYSTEM_USER')")
-    public CaseNoteTypeDto updateCaseNoteSubType(final String parentType, final String subType, @NotNull @Valid final UpdateCaseNoteType body) {
+    public CaseNoteTypeDto updateCaseNoteSubType(
+        final String parentType,
+        final String subType,
+        @NotNull @Valid final UpdateCaseNoteType body
+    ) {
 
-        final var parentNoteType = parentCaseNoteTypeRepository.findById(parentType).orElseThrow(EntityNotFoundException.withId(parentType));
-        final var existingSubType = parentNoteType.getSubType(subType).orElseThrow(EntityNotFoundException.withId(parentType + " " + subType));
+        final var parentNoteType =
+            parentCaseNoteTypeRepository.findById(parentType).orElseThrow(EntityNotFoundException.withId(parentType));
+        final var existingSubType =
+            parentNoteType.getSubType(subType).orElseThrow(EntityNotFoundException.withId(parentType + " " + subType));
         existingSubType.update(body.getDescription(), body.isActive(), body.isSensitive(), body.isRestrictedUse());
         return transform(parentNoteType, true, true, true);
     }
@@ -397,7 +463,11 @@ public class CaseNoteService {
         repository.deleteOffenderCaseNoteAmendmentsByOffenderIdentifier(offenderIdentifier);
         final var deletedCaseNotesCount = repository.deleteOffenderCaseNoteByOffenderIdentifier(offenderIdentifier);
         log.info("Deleted {} case notes for offender identifier {}", deletedCaseNotesCount, offenderIdentifier);
-        telemetryClient.trackEvent("OffenderDelete", Map.of("offenderNo", offenderIdentifier, "count", valueOf(deletedCaseNotesCount)), null);
+        telemetryClient.trackEvent(
+            "OffenderDelete",
+            Map.of("offenderNo", offenderIdentifier, "count", valueOf(deletedCaseNotesCount)),
+            null
+        );
         return deletedCaseNotesCount;
     }
 
@@ -407,33 +477,41 @@ public class CaseNoteService {
         if (isNotSensitiveCaseNote(caseNoteId)) {
             throw new ValidationException("Case note id not a sensitive case note, please delete through NOMIS");
         }
-        final var caseNote = repository.findById(UUID.fromString(caseNoteId)).orElseThrow(() -> new EntityNotFoundException("Case note not found"));
+        final var caseNote = repository.findById(UUID.fromString(caseNoteId))
+            .orElseThrow(() -> new EntityNotFoundException("Case note not found"));
         if (!caseNote.getOffenderIdentifier().equalsIgnoreCase(offenderIdentifier)) {
             throw new ValidationException("case note id not connected with offenderIdentifier");
         }
         repository.deleteById(UUID.fromString(caseNoteId));
-        telemetryClient.trackEvent("SecureCaseNoteSoftDelete",
-                Map.of("userName", securityUserContext.getCurrentUser().getUsername(),
-                        "offenderId", offenderIdentifier,
-                        "case note id", caseNoteId),
-                null);
+        telemetryClient.trackEvent(
+            "SecureCaseNoteSoftDelete",
+            Map.of("userName", securityUserContext.getCurrentUser().getUsername(),
+                "offenderId", offenderIdentifier,
+                "case note id", caseNoteId
+            ),
+            null
+        );
     }
 
     @Transactional
     @PreAuthorize("hasRole('DELETE_SENSITIVE_CASE_NOTES')")
     public void softDeleteCaseNoteAmendment(final String offenderIdentifier, final Long caseNoteAmendmentId) {
-        final var caseNoteAmendment = amendmentRepository.findById(caseNoteAmendmentId).orElseThrow(() -> new EntityNotFoundException("Case note amendment not found"));
+        final var caseNoteAmendment = amendmentRepository.findById(caseNoteAmendmentId)
+            .orElseThrow(() -> new EntityNotFoundException("Case note amendment not found"));
 
         if (!caseNoteAmendment.getCaseNote().getOffenderIdentifier().equalsIgnoreCase(offenderIdentifier)) {
             throw new ValidationException("case note amendment id not connected with offenderIdentifier");
         }
         amendmentRepository.deleteById(caseNoteAmendmentId);
 
-        telemetryClient.trackEvent("SecureCaseNoteAmendmentSoftDelete",
-                Map.of("userName", securityUserContext.getCurrentUser().getUsername(),
-                        "offenderId", offenderIdentifier,
-                        "case note amendment id", valueOf(caseNoteAmendmentId)),
-                null);
+        telemetryClient.trackEvent(
+            "SecureCaseNoteAmendmentSoftDelete",
+            Map.of("userName", securityUserContext.getCurrentUser().getUsername(),
+                "offenderId", offenderIdentifier,
+                "case note amendment id", valueOf(caseNoteAmendmentId)
+            ),
+            null
+        );
     }
 
     private boolean isAllowedToCreateRestrictedCaseNote() {
